alignment issue fixed

--- a/src/global.scss
+++ b/src/global.scss
@@ -211,11 +211,11 @@ ion-card {
   padding-top: 10px;
   margin:0;
   border-radius: 8px;
-  h3 {
+  h1 {
     color: $color-primary;
     font-size: $font-size-xlll;
     margin: 0;
-    margin-bottom: 5px;
+    margin-bottom: 24px;
   }
   .cc-content{
     color: $color-dark-Gray;
