--- a/src/scss/partials/_ionic.controls.scss
+++ b/src/scss/partials/_ionic.controls.scss
@@ -56,7 +56,7 @@ ion-card-content {
   padding-bottom: 10px !important;
 }
 ion-button{
-  text-transform: capitalize;
+  text-transform: inherit;
 }
 .search-toolbar {
   .searchbar-input.sc-ion-searchbar-md {
